feat: cleaning up from hello api related code
