# api.yml
@@ -17,28 +17,6 @@ info:
 servers:
   - url: http://localhost:1323
 paths:
-  /hello:
-    get:
-      summary: This is just a test endpoint to get you started.
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NotFoundErrorResponse"
   /estate:
     post:
       summary: Create a new estate
@@ -222,14 +200,6 @@ paths:
 
 components:
   schemas:
-    HelloResponse:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
-          example: Hello, World!
     InternalServerErrorResponse:
       type: object
       required:
